; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphics.c_test_getdc_scaled.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphics.c_test_getdc_scaled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PixelFormat24bppRGB = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@MatrixOrderPrepend = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"got NULL hdc\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_getdc_scaled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_getdc_scaled() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* null, i32** %2, align 8
  store i32* null, i32** %3, align 8
  store i32* null, i32** %4, align 8
  %8 = load i32, i32* @PixelFormat24bppRGB, align 4
  %9 = call i32 @GdipCreateBitmapFromScan0(i32 10, i32 10, i32 12, i32 %8, i32* null, i32** %3)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* @Ok, align 4
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @expect(i32 %10, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @GdipGetImageGraphicsContext(i32* %13, i32** %2)
  store i32 %14, i32* %1, align 4
  %15 = load i32, i32* @Ok, align 4
  %16 = load i32, i32* %1, align 4
  %17 = call i32 @expect(i32 %15, i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @MatrixOrderPrepend, align 4
  %20 = call i32 @GdipScaleWorldTransform(i32* %18, double 2.000000e+00, double 2.000000e+00, i32 %19)
  store i32 %20, i32* %1, align 4
  %21 = load i32, i32* @Ok, align 4
  %22 = load i32, i32* %1, align 4
  %23 = call i32 @expect(i32 %21, i32 %22)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @GdipGetDC(i32* %24, i32** %4)
  store i32 %25, i32* %1, align 4
  %26 = load i32, i32* @Ok, align 4
  %27 = load i32, i32* %1, align 4
  %28 = call i32 @expect(i32 %26, i32 %27)
  %29 = load i32*, i32** %4, align 8
  %30 = icmp ne i32* %29, null
  %31 = zext i1 %30 to i32
  %32 = call i32 @ok(i32 %31, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %33 = call i32 @RGB(i32 255, i32 0, i32 0)
  %34 = call i32 @CreateSolidBrush(i32 %33)
  store i32 %34, i32* %5, align 4
  %35 = load i32*, i32** %4, align 8
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @SelectObject(i32* %35, i32 %36)
  store i32 %37, i32* %6, align 4
  %38 = load i32*, i32** %4, align 8
  %39 = call i32 @Rectangle(i32* %38, i32 2, i32 2, i32 6, i32 6)
  %40 = load i32*, i32** %4, align 8
  %41 = load i32, i32* %6, align 4
  %42 = call i32 @SelectObject(i32* %40, i32 %41)
  %43 = load i32, i32* %5, align 4
  %44 = call i32 @DeleteObject(i32 %43)
  %45 = load i32*, i32** %2, align 8
  %46 = load i32*, i32** %4, align 8
  %47 = call i32 @GdipReleaseDC(i32* %45, i32* %46)
  store i32 %47, i32* %1, align 4
  %48 = load i32, i32* @Ok, align 4
  %49 = load i32, i32* %1, align 4
  %50 = call i32 @expect(i32 %48, i32 %49)
  %51 = load i32*, i32** %2, align 8
  %52 = call i32 @GdipDeleteGraphics(i32* %51)
  %53 = load i32*, i32** %3, align 8
  %54 = call i32 @GdipBitmapGetPixel(i32* %53, i32 3, i32 3, i32* %7)
  store i32 %54, i32* %1, align 4
  %55 = load i32, i32* @Ok, align 4
  %56 = load i32, i32* %1, align 4
  %57 = call i32 @expect(i32 %55, i32 %56)
  %58 = load i32, i32* %7, align 4
  %59 = call i32 @expect(i32 -65536, i32 %58)
  %60 = load i32*, i32** %3, align 8
  %61 = call i32 @GdipBitmapGetPixel(i32* %60, i32 8, i32 8, i32* %7)
  store i32 %61, i32* %1, align 4
  %62 = load i32, i32* @Ok, align 4
  %63 = load i32, i32* %1, align 4
  %64 = call i32 @expect(i32 %62, i32 %63)
  %65 = load i32, i32* %7, align 4
  %66 = call i32 @expect(i32 -16777216, i32 %65)
  %67 = load i32*, i32** %3, align 8
  %68 = call i32 @GdipDisposeImage(i32* %67)
  ret void
}

declare dso_local i32 @GdipCreateBitmapFromScan0(i32, i32, i32, i32, i32*, i32**) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @GdipGetImageGraphicsContext(i32*, i32**) #1

declare dso_local i32 @GdipScaleWorldTransform(i32*, double, double, i32) #1

declare dso_local i32 @GdipGetDC(i32*, i32**) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @CreateSolidBrush(i32) #1

declare dso_local i32 @RGB(i32, i32, i32) #1

declare dso_local i32 @SelectObject(i32*, i32) #1

declare dso_local i32 @Rectangle(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @DeleteObject(i32) #1

declare dso_local i32 @GdipReleaseDC(i32*, i32*) #1

declare dso_local i32 @GdipDeleteGraphics(i32*) #1

declare dso_local i32 @GdipBitmapGetPixel(i32*, i32, i32, i32*) #1

declare dso_local i32 @GdipDisposeImage(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
